add English Wiktionary to ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 Jordan_Jovkov_-_Zhetvarjat-7865.txt
 Jordan_Jovkov_-_Zhetvarjat-7865.txt.csv
 bgwiktionary-*-pages-meta-current.xml
+enwiktionary-*-pages-meta-current.xml
 dict.list
 pairs.xml
 pairs.txt
