fix git ignore for latest word pair file format, remove old temp files too

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,4 @@ Jordan_Jovkov_-_Zhetvarjat-7865.txt.csv
 bgwiktionary-*-pages-meta-current.xml.bz2
 enwiktionary-*-pages-meta-current.xml.bz2
 enWiktBG.pickle
-dict.list
-pairs.xml
-pairs.txt
+pairs.txt.bz2
