--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,5 @@ Jordan_Jovkov_-_Zhetvarjat-7865.txt.csv
 bgwiktionary-*-pages-meta-current.xml.bz2
 enwiktionary-*-pages-meta-current.xml.bz2
 enWiktBG.pickle
+bgWiktBG.pickle
 pairs.txt.bz2
