--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 *.pyc
 Jordan_Jovkov_-_Zhetvarjat-7865.txt
-Jordan_Jovkov_-_Zhetvarjat-7865.txt.csv
+Jordan_Jovkov_-_Zhetvarjat-7865.txt*csv
 bgwiktionary-*-pages-meta-current.xml.bz2
 enwiktionary-*-pages-meta-current.xml.bz2
 enWiktBG.pickle
 bgWiktBG.pickle
-pairs.txt.bz2
