oh yeah, gitignore needs to ignore the bziped versions of the picles now...

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,5 @@ Jordan_Jovkov_-_Zhetvarjat-7865.txt
 Jordan_Jovkov_-_Zhetvarjat-7865.txt*csv
 bgwiktionary-*-pages-meta-current.xml.bz2
 enwiktionary-*-pages-meta-current.xml.bz2
-enWiktBG.pickle
-bgWiktBG.pickle
+enWiktBG.pickle.bz2
+bgWiktBG.pickle.bz2
