Start adding plugin functionality, should it just be an import plugin, or should it add some dialog of some sort.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libanki"]
 	path = libanki
 	url = git://github.com/dae/libanki.git
+[submodule "ankiqt"]
+	path = ankiqt
+	url = git://github.com/dae/ankiqt.git
