more eclipse changes

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
 eclipse.preferences.version=1
 encoding/ankiImport.py=utf-8
+encoding/parseDoc.py=utf-8
+encoding/parseWikt.py=utf-8
 encoding/wiktionaryGet.py=utf-8
